--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "dependencies": {
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-sass": "^4.0.2",
     "gulp-watch": "^5.0.1",
     "jasmine": "^3.3.1",
     "jasmine-core": "^3.4.0"
