--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-terser": "^1.1.7",
     "gulp-watch": "^5.0.1",
     "jasmine": "^3.3.1",
     "jasmine-core": "^3.4.0"
